--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family:"Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
@@ -18,29 +18,32 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
+  color: white;
+  padding: 0 .25em;
+  /*background-color: rgba(255, 255, 255, 0.08);*/
+  border-color: white;
   border-style: solid;
   border-width: 1px;
-  border-radius: 0.3rem;
+  border-radius: 2rem;
+  line-height: 1.5em;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
   .btn + .btn {
     margin-left: 1rem; }
 
 .btn:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: #7EA29A;
   text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+  background-color: white;
+  border-color: white; }
+.num{width: 50px;height: 50px;border-radius: 25px;line-height: 50px;background-color: #7EA29A;color: white;text-align: center;vertical-align: middle;float: left;margin:0 1em 2em 0;}
 
 @media screen and (min-width: 64em) {
   .btn {
-    padding: 0.75rem 1rem; } }
+    padding: 0.75rem 2rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .btn {
-    padding: 0.6rem 0.9rem;
+    padding: 0.6rem 2rem;
     font-size: 0.9rem; } }
 
 @media screen and (max-width: 42em) {
@@ -56,8 +59,9 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #7EA29A;
+  /*background-image: linear-gradient(120deg, #155799, #159957);*/
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -112,7 +116,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #7EA29A; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
