--- a/greybox/sass/_button.scss
+++ b/greybox/sass/_button.scss
@@ -4,3 +4,198 @@
 .read-more:hover{border: 1px solid white;/*e6e6e8*/ background: white; color: #545454;}
 #overlay-search .read-more:hover{border: 1px solid black;/*e6e6e8*/ background: white; color: black;}
 #overlay-search .read-more:hover{border: 1px solid #545454; background: #545454; color: white;}
+
+.btn-default {
+  color: #333;
+  background-color: #fff;
+  border-color: #ccc;
+  &:hover, &:focus, &:active, &.active {
+    color: #333;
+    background-color: #ebebeb;
+    border-color: #adadad;
+  }
+}
+
+.open .dropdown-toggle.btn-default {
+  color: #333;
+  background-color: #ebebeb;
+  border-color: #adadad;
+}
+
+.btn-default {
+  &:active, &.active {
+    background-image: none;
+  }
+}
+
+.open .dropdown-toggle.btn-default {
+  background-image: none;
+}
+
+.btn-default {
+  &.disabled, &[disabled] {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+}
+
+fieldset[disabled] .btn-default {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default {
+  &.disabled:hover, &[disabled]:hover {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+}
+
+fieldset[disabled] .btn-default:hover {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default {
+  &.disabled:focus, &[disabled]:focus {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+}
+
+fieldset[disabled] .btn-default:focus {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default {
+  &.disabled:active, &[disabled]:active {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+}
+
+fieldset[disabled] .btn-default:active {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default {
+  &.disabled.active, &[disabled].active {
+    background-color: #fff;
+    border-color: #ccc;
+  }
+}
+
+fieldset[disabled] .btn-default.active {
+  background-color: #fff;
+  border-color: #ccc;
+}
+
+.btn-default .badge {
+  color: #fff;
+  background-color: #fff;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+  &:hover, &:focus, &:active, &.active {
+    color: #fff;
+    background-color: #0095a6;
+    border-color: #006c78;
+  }
+}
+
+.open .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #0095a6;
+  border-color: #006c78;
+}
+
+.btn-primary {
+  &:active, &.active {
+    background-image: none;
+  }
+}
+
+.open .dropdown-toggle.btn-primary {
+  background-image: none;
+}
+
+.btn-primary {
+  &.disabled, &[disabled] {
+    background-color: $linkhovercolor;
+    border-color: #00a2b6;
+  }
+}
+
+fieldset[disabled] .btn-primary {
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+}
+
+.btn-primary {
+  &.disabled:hover, &[disabled]:hover {
+    background-color: $linkhovercolor;
+    border-color: #00a2b6;
+  }
+}
+
+fieldset[disabled] .btn-primary:hover {
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+}
+
+.btn-primary {
+  &.disabled:focus, &[disabled]:focus {
+    background-color: $linkhovercolor;
+    border-color: #00a2b6;
+  }
+}
+
+fieldset[disabled] .btn-primary:focus {
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+}
+
+.btn-primary {
+  &.disabled:active, &[disabled]:active {
+    background-color: $linkhovercolor;
+    border-color: #00a2b6;
+  }
+}
+
+fieldset[disabled] .btn-primary:active {
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+}
+
+.btn-primary {
+  &.disabled.active, &[disabled].active {
+    background-color: $linkhovercolor;
+    border-color: #00a2b6;
+  }
+}
+
+fieldset[disabled] .btn-primary.active {
+  background-color: $linkhovercolor;
+  border-color: #00a2b6;
+}
+
+.btn-primary .badge {
+  color: $linkhovercolor;
+  background-color: #fff;
+}
+
+.btn-warning {
+  color: #fff;
+  background-color: #f04e55;
+  border-color: #ee363e;
+  &:hover, &:focus, &:active, &.active {
+    color: #fff;
+    background-color: #ed2831;
+    border-color: #d5121b;
+  }
+}
