--- a/greybox/sass/global.scss
+++ b/greybox/sass/global.scss
@@ -11,6 +11,7 @@
 @import 'tile';
 @import 'carousel';
 @import 'overlay';
+@import 'quotes';
 @import 'button';
 @import 'navbar';
 @import 'modal';
@@ -20,3 +21,4 @@
 @import 'form';
 @import 'blog';
 @import 'social';
+@import 'mixins';
