--- a/greybox/sass/_palette.scss
+++ b/greybox/sass/_palette.scss
@@ -204,3 +204,17 @@ a.palette-inverse {
   color: #C75134;
   &.palette-inverse {background-color: #C75134;}
 }
+
+.stats-hero.purple{background-color: #8385c3;}
+.stats-hero.red{background-color: #EF4544;}
+.stats-hero.blush{background-color: #BD473D;}
+.stats-hero.cream{background-color: #CFAAA5;}
+.stats-hero.mustard{background-color: #B9B445; /*aaa52d*/}
+.stats-hero.sand{background-color: #D6CFB9;}
+.stats-hero.teal{background-color: #7ea29a;}
+.stats-hero.navydark{background-color: #37477D;}
+.stats-hero.navy{background-color: #5C6FAF;}
+.stats-hero.orange{background-color: #C75134;}
+.stats-hero.grey90{background-color: #353535;}
+.stats-hero.passion{background-color: #D2595E;}
+.stats-hero.steel{background-color: #4D6974;}
