--- a/greybox/sass/_quotes.scss
+++ b/greybox/sass/_quotes.scss
@@ -62,6 +62,13 @@ ul#cyclelist li, #shuffle .quote{
   color:#545454;
   height: 65px;
 }
+#quotes .quote-outer{position: relative;min-height: 400px;}
+@media (min-width: 768px){
+  .item .stats-hero{
+    min-height: 400px;
+    position: relative;
+  }
+}
 @media (max-width: 767px){
   .toggle{
     position:absolute;
@@ -83,8 +90,24 @@ ul#cyclelist li, #shuffle .quote{
     padding:10px;
     bottom:25px;
   }
-
 }
+@media (max-width: 992px){
+  .quote .num{
+    font-size:.35em;
+    height:50px;
+    margin-top:13px;
+  }
+  #quotes .quote-outer{
+    min-height:300px;
+  }
+  .item .stats-hero{
+    min-height:300px;
+  }
+  .stats-hero .quote-inner{
+    bottom:25px;
+  }
+}
+
 .quote-inner .quote{
   color: white;
   font-size: 3em;
@@ -102,7 +125,6 @@ ul#cyclelist li, #shuffle .quote{
 @media screen and (min-width: 992px){
   .quote-inner .quote{font-size: 5em;}
 }
-#quotes .quote-outer{position: relative;min-height: 400px;}
 @media (max-width: 767px){
   #quotes .carousel-indicators{top:20px}
   #quotes .carousel-control.right,#quotes .carousel-control.left{top:345px;}
