--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -41,9 +41,9 @@
 .tile-carousel .category {
   margin-bottom: 12px!important;
 }
-/* 
+/*
 
-				START OF TILE-GRAPHIC & TILE-TITLE 
+				START OF TILE-GRAPHIC & TILE-TITLE
 
 */
 .tile-graphic {
@@ -105,7 +105,6 @@
     font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.1;
     color: inherit;
-    font-size: 30px;
     font-size: 22px;
     font-weight: 500;
     line-height: 1.0909090909090908;
@@ -280,7 +279,11 @@
     }
     .tile-title {
       margin-right: 0;
+			font-size:18px;
     }
+		.tile-hybrid .tile-title+p{
+			margin-top:10px;
+		}
     .tile-category {
       float: right;
       margin: 12px 15px 0 0;
@@ -338,7 +341,7 @@
       padding: 1.5em .5em;
       background: none;
       @include transition(all 0.3s ease-in-out);
-      
+
       	&:hover{
 	      	background: $transgrey1;
 	      	@include transition(all 0.3s ease-in-out);
@@ -354,8 +357,24 @@
       width: 100%;
       padding: 1.15em .5em;
       background: none;
+			+ p {
+				font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+				line-height: 1.1;
+				color: inherit;
+				font-size: 36px;
+				font-size: 24px;
+				font-weight: 500;
+				line-height: 1.25;
+				line-height: 1;
+				margin-top: 15px;
+				small, .small {
+					font-weight: normal;
+					line-height: 1;
+					color: #d2d0cd;
+				}
+			}
       @include transition(all 0.3s ease-in-out);
-      
+
       	&:hover{
 	      	background: $transgrey1;
 	      	@include transition(all 0.3s ease-in-out);
@@ -381,7 +400,7 @@
           font-weight: 500;
           line-height: 1.25;
           line-height: 1;
-          margin-top: 30px;
+          margin-top: 15px;
           small, .small {
             font-weight: normal;
             line-height: 1;
@@ -501,8 +520,13 @@
     }
   }
 }
-/* 
+.tile:hover .tile-title{
+//	background: rgba(256, 256, 256, 1);color:#5f5f5f;
+	border-bottom: 5px solid white;
+}
+.tile-graphic.tile-medium .tile-title:hover{background: rgba(256, 256, 256, 1);color:#5f5f5f;}
+/*
 
-				END OF TILE-GRAPHIC & TILE-TITLE 
+				END OF TILE-GRAPHIC & TILE-TITLE
 
 */;
