--- a/greybox/sass/global.scss
+++ b/greybox/sass/global.scss
@@ -1,5 +1,5 @@
 //global.scss
-@import "compass/css3/transition";
+//@import "compass/css3/transition";
 @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=5cff4beb-9d80-4122-b00d-c4420417aa8e");
 @import 'warning';
 @import 'reset';
