--- a/greybox/sass/_flat.scss
+++ b/greybox/sass/_flat.scss
@@ -1,24 +1,9 @@
 //_flat.scss
 @import 'flat-fonts';
 
-$bodycolor: #D6DEEA;
-$textcolor: #262a2b;
-$linkcolor: #ff4632;
-
-//
-body *{ background-color: none !important; }
-body * *{ background-color: none !important; }
-body * * *{ background-color: none !important; }
-body * * * *{ background-color: none !important; }
-body * * * * *{ background-color: none !important; }
-body * * * * * *{ background-color: none !important; }
-
-div *{ background-color: none !important; }
-div * *{ background-color: none !important; }
-div * * *{ background-color: none !important; }
-div * * * *{ background-color: none !important; }
-div * * * * *{ background-color: none !important; }
-div * * * * * *{ background-color: none !important; }
+$flatbodycolor: #f3f4f8; /*|| f3f4f8 | D6DEEA ||*/
+$flattextcolor: #262a2b;
+$flatlinkcolor: #202b53; /*|| 202b53 | ff4632 ||*/
 
 #flat *{ background-color: none !important; }
 #flat * *{ background-color: none !important; }
@@ -27,19 +12,33 @@ div * * * * * *{ background-color: none !important; }
 #flat * * * * *{ background-color: none !important; }
 #flat * * * * * *{ background-color: none !important; }
 
-body, .navbar, .stats-hero, #carousel-quotes > div > div > div, #flat article.tile-hybrid *, .quote-inner .quote, #featured{
-  background-color:$bodycolor !important;
-  color:$textcolor !important;
+#flat, #flat .navbar, .stats-hero, #flat #carousel-quotes > div > div > div, #flat article.tile-hybrid *, #flat .quote-inner .quote, #featured{
+  background-color:$flatbodycolor !important;
+  color:$flattextcolor !important;
   //font-family: $cousine;
 }
-a{
+#flat a{
   &:hover{
-    color: $linkcolor;
+    color: $flatlinkcolor !important;
   }
 }
 h1, h2, h3, h4, h5, h6{
   //font-family: $oldstandard;
 }
-.quote-outer{
-  border-top: 1px solid $textcolor;
+#flat .footer-brand{
+  opacity: .75;
+  &:hover{
+    opacity:1;
+  }
+}
+#flat #navbar{
+  .navbar{
+    padding: 100px 18px 0;
+  }
+  nav{
+    a{
+      color: $flattextcolor;
+      &:hover{color:$flatlinkcolor !important;}
+    }
+  }
 }
