--- a/greybox/sass/_footer.scss
+++ b/greybox/sass/_footer.scss
@@ -8,6 +8,7 @@
   width:100%;
   z-index:-1;
   color:white;
+  padding:20px 0;
   a{
   color:white;
   border-bottom:none;
@@ -18,7 +19,7 @@
   #back-top{
     position:absolute;
     right:8px;
-    top:-18px;
+    top:-30px;
     a{
       color:white;
       font-size:2em;
