--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -5476,6 +5476,10 @@ ul{
   #projects .col-sm-4 .tile-medium {
     max-height: 193px;
     overflow: hidden; } }
+@media (max-width: 767px) {
+  #projects .row .col-sm-4 article {
+    max-height: 335px;
+    overflow: hidden; } }
 .carousel {
   position: relative; }
 
@@ -7073,9 +7077,44 @@ body.modal-open, .modal-open .navbar-fixed-top {
       opacity: 1;
       filter: alpha(opacity=100); }
 
+.footer [class^="material-icons"] {
+  float: left;
+  margin-left: -24px;
+  position: relative;
+  text-align: center;
+  top: .25em;
+  width: 24px; }
+
 @media (max-width: 767px) {
-  .footer [class^="icon-"], .footer [class*="icon-"], .footer [class^="fa-"], .footer [class*="fa-"] {
-    margin-left: -8px; } }
+  .footer [class^="icon-"], .footer [class*="icon-"], .footer [class^="fa-"], .footer [class*="fa-"], .footer [class^="material-icons"] {
+    margin-left: 0px; }
+
+  .wrapper {
+    margin-bottom: 400px; }
+
+  .footer-para {
+    height: 400px; }
+    .footer-para #back-top {
+      position: relative;
+      display: block;
+      width: 40px;
+      margin: 0 auto; }
+
+  .footer {
+    padding: 20px; }
+    .footer .list-unstyled {
+      width: 178px;
+      margin: 20px auto; }
+      .footer .list-unstyled li {
+        display: inline-block; }
+        .footer .list-unstyled li a i, .footer .list-unstyled li a .material-icons {
+          width: 42px;
+          border: 1px solid white;
+          border-radius: 40px;
+          font-size: 1.75em;
+          padding: 10px; }
+    .footer .text-right {
+      text-align: center; } }
 .google-map {
   width: 100%;
   min-height: 300px; }
