--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -291,10 +291,14 @@
       padding-left: 15px;
       padding-right: 0;
       position: absolute;
+			h1,h2,h3,h4,h5,h6{
+				margin:.5em 0;
+			}
     }
     .tile-title {
       margin-right: 0;
 			font-size:18px;
+			margin-top:.5em;
     }
 		.tile-hybrid .tile-title+p{
 			margin-top:10px;
