--- a/greybox/sass/_flat-fonts.scss
+++ b/greybox/sass/_flat-fonts.scss
@@ -2,7 +2,8 @@
 @import url('http://fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,700,500italic,700italic');
 @import url('https://fonts.googleapis.com/css?family=Cousine:400,400italic,700,700italic');
 @import url('https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700');
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic,700italic,700,600italic,600,400italic,300italic,300');
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black');
 @font-face {
   font-family: 'menloregular';
   src: url('../font/menlo-regular-webfont.eot');
