--- a/greybox/sass/global.scss
+++ b/greybox/sass/global.scss
@@ -9,6 +9,7 @@
 @import 'prime';
 @import 'module';
 @import 'tile';
+@import 'typography';
 @import 'carousel';
 @import 'overlay';
 @import 'quotes';
@@ -23,4 +24,4 @@
 @import 'social';
 @import 'mixins';
 //@import 'flat';
-@import 'flat-fonts';
+//@import 'flat-fonts';
