--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -7,11 +7,6 @@
 
 
 ////////////////////////////////////////*/
-@import url("http://fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,700,500italic,700italic");
-@import url("https://fonts.googleapis.com/css?family=Cousine:400,400italic,700,700italic");
-@import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700");
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic,700italic,700,600italic,600,400italic,300italic,300");
-@import url("https://fonts.googleapis.com/css?family=Archivo+Black");
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
   display: block; }
 
@@ -3331,6 +3326,9 @@ input, button, select, textarea {
   font-size: inherit;
   line-height: inherit; }
 
+p a {
+  position: relative; }
+
 a {
   color: #545454;
   /* #545454 #62645c */
@@ -4855,6 +4853,16 @@ aside.pull-right figcaption {
   padding-right: 33.33333%;
   margin-bottom: 20px; }
 
+#container > div.main {
+  border: none !important; }
+
+.theme-white .extra, .theme-white .main {
+  border-color: white !important; }
+
+iframe *, iframe * *, iframe * * *, iframe * * * *, iframe * * * * *, iframe * * * * * * {
+  border-color: white !important;
+  border: none !important; }
+
 .module-article {
   padding-left: 8px;
   padding-right: 8px;
@@ -5004,15 +5012,27 @@ ul{
       right: 0;
       top: 0; }
     .module-hero .download {
-      font-size: 14px;
+      font-size: 1em;
       font-weight: 200;
       letter-spacing: .005em;
       line-height: 1.2857142857142858;
       margin: 0;
       position: absolute;
       right: 0;
-      top: 67px;
-      white-space: nowrap; } }
+      top: 55px;
+      white-space: nowrap; }
+    .module-hero .read-time {
+      font-size: .8em;
+      font-weight: 500;
+      letter-spacing: .005em;
+      line-height: 1.2857142857142858;
+      margin: 0;
+      position: absolute;
+      right: 0;
+      top: 55px;
+      white-space: nowrap; }
+      .module-hero .read-time i {
+        font-size: 1.11em; } }
 @media (min-width: 992px) {
   .module-hero {
     margin-left: -22px;
@@ -5282,14 +5302,14 @@ ul{
       position: absolute; }
     .tile-hybrid.tile-large a {
       min-height: 588px; }
-    .tile-hybrid .tile-excerpt {
+    .tile-hybrid .tile-excerpt, .tile-hybrid .featured-info {
       bottom: 18px;
       margin-right: 25%;
       padding-left: 15px;
       padding-right: 0;
       position: absolute; }
-      .tile-hybrid .tile-excerpt h1, .tile-hybrid .tile-excerpt h2, .tile-hybrid .tile-excerpt h3, .tile-hybrid .tile-excerpt h4, .tile-hybrid .tile-excerpt h5, .tile-hybrid .tile-excerpt h6 {
-        margin: .5em 0; }
+      .tile-hybrid .tile-excerpt h1, .tile-hybrid .tile-excerpt h2, .tile-hybrid .tile-excerpt h3, .tile-hybrid .tile-excerpt h4, .tile-hybrid .tile-excerpt h5, .tile-hybrid .tile-excerpt h6, .tile-hybrid .featured-info h1, .tile-hybrid .featured-info h2, .tile-hybrid .featured-info h3, .tile-hybrid .featured-info h4, .tile-hybrid .featured-info h5, .tile-hybrid .featured-info h6 {
+        margin: .25em 0; }
     .tile-hybrid .tile-title {
       margin-right: 0;
       font-size: 18px;
@@ -5488,6 +5508,92 @@ ul{
   #projects .row .col-sm-4 article {
     max-height: 335px;
     overflow: hidden; } }
+#navbar .material-icons {
+  vertical-align: middle;
+  font-size: 18px !important; }
+
+.tile-excerpt h1, .tile-excerpt h2, .tile-excerpt h3, .tile-excerpt h4, .tile-excerpt h5, .tile-excerpt h6, .featured-info h1, .featured-info h2, .featured-info h3, .featured-info h4, .featured-info h5, .featured-info h6 {
+  margin: .25em 0; }
+
+#featured {
+  position: relative; }
+
+#featured .featured-info {
+  position: absolute;
+  bottom: 0;
+  right: 0; }
+
+@media (max-width: 767px) {
+  #featured .featured-info {
+    position: relative; } }
+#featured h1, #featured h2, #featured h3, #featured h4, #featured h5, #featured h6 {
+  margin: .5em 0; }
+
+#featured h1 a, #feaured h2 a, #featured h3 a, #featured h4 a, #featured h5 a {
+  color: #3F3F3F;
+  border: none; }
+
+#featured p {
+  letter-spacing: .005em;
+  font-size: .95em;
+  margin-bottom: 12px;
+  line-height: 1.75em; }
+
+.intro, .callout {
+  font-weight: 600 !important;
+  letter-spacing: 0;
+  line-height: 1.25em; }
+
+h4, .h4 {
+  font-size: 1.15em !important; }
+
+blockquote::before {
+  content: "“" !important; }
+
+blockquote::after {
+  content: "”" !important; }
+
+figcaption {
+  color: #545454; }
+
+@media (min-width: 768px) {
+  .module-article > hr.dashed {
+    display: block;
+    width: 30%;
+    border-bottom: 1px solid #545454;
+    border-top: none;
+    margin-right: 57.66666666666667%;
+    margin-top: 2.5em;
+    margin-bottom: 2.5em; } }
+@media (min-width: 768px) {
+  .module-article pre.prettyprint {
+    margin-right: 41.66666666666667%;
+    margin-top: 0;
+    padding: 10px;
+    border: 1px solid #CCC;
+    max-height: 400px;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap !important;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+    overflow-x: auto; } }
+/* !!! ADJUST HR !!! */
+hr.dashed {
+  display: block;
+  width: 100%;
+  border-bottom: 2px dashed #545454; }
+
+mark {
+  background-color: #FFFF9E;
+  color: #545454; }
+
+/*DISPLAYS LIGHTER THAN NON_ITALIC*/
+/*cite{font-style: italic;}*/
+.material-icons {
+  font-size: inherit !important;
+  vertical-align: bottom; }
+
 .carousel {
   position: relative; }
 
@@ -5830,9 +5936,12 @@ ul#cyclelist li, #shuffle .quote {
 
 .quote .num {
   font-size: .2em;
-  font-weight: 400;
+  font-weight: 500;
   color: #545454;
   height: 65px; }
+  .quote .num sup {
+    font-weight: 900;
+    top: -0.4em; }
 
 #quotes .quote-outer {
   position: relative;
@@ -7091,7 +7200,8 @@ body.modal-open, .modal-open .navbar-fixed-top {
   position: relative;
   text-align: center;
   top: .25em;
-  width: 24px; }
+  width: 24px;
+  font-size: 1.11em !important; }
 
 @media (max-width: 767px) {
   .footer [class^="icon-"], .footer [class*="icon-"], .footer [class^="fa-"], .footer [class*="fa-"], .footer [class^="material-icons"] {
@@ -8175,7 +8285,7 @@ input[type="submit"]:hover {
 .social span a:hover {
   color: black; }
 
-.social span a span.hint {
+a span.hint, .social span a span.hint, .read-time a span.hint {
   pointer-events: none;
   display: none;
   position: absolute;
@@ -8184,6 +8294,7 @@ input[type="submit"]:hover {
   height: 2rem;
   line-height: 2rem;
   background-color: #545454;
+  font-weight: 400;
   border-radius: 1rem;
   padding: 0 0.6875rem;
   color: white !important;
@@ -8193,27 +8304,11 @@ input[type="submit"]:hover {
   -webkit-transform: translateX(calc(-50% + 20px));
   -ms-transform: translateX(calc(-50% + 20px)); }
 
-.social span a:hover span.hint {
+.read-time a span.hint {
+  left: 17px; }
+
+a:hover span.hint, .social span a:hover span.hint, .read-time a:hover span.hint {
   display: inline-block;
   color: white; }
-
-@font-face {
-  font-family: 'menloregular';
-  src: url("../font/menlo-regular-webfont.eot");
-  src: url("../font/menlo-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../font/menlo-regular-webfont.woff2") format("woff2"), url("../font/menlo-regular-webfont.woff") format("woff"), url("../font/menlo-regular-webfont.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'proxima_nova_rgbold';
-  src: url("../font/proximanova-bold-webfont.eot");
-  src: url("../font/proximanova-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../font/proximanova-bold-webfont.woff2") format("woff2"), url("../font/proximanova-bold-webfont.woff") format("woff"), url("../font/proximanova-bold-webfont.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'freightbig_probold';
-  src: url("../font/freightbigprobold-regular-webfont.eot");
-  src: url("../font/freightbigprobold-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../font/freightbigprobold-regular-webfont.woff2") format("woff2"), url("../font/freightbigprobold-regular-webfont.woff") format("woff"), url("../font/freightbigprobold-regular-webfont.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
 
 /*# sourceMappingURL=global.css.map */
