--- a/greybox/sass/_quotes.scss
+++ b/greybox/sass/_quotes.scss
@@ -59,9 +59,13 @@ ul#cyclelist li, #shuffle .quote{
 }
 .quote .num{
   font-size: .2em;
-  font-weight: 400;
+  font-weight: 500;
   color:#545454;
   height: 65px;
+  sup{
+    font-weight:900;
+    top:-0.4em;
+  }
 }
 #quotes .quote-outer{position: relative;min-height: 400px;}
 @media (min-width: 768px){
