--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -285,14 +285,14 @@
 	      min-height: 588px;
 	    }
 		}
-    .tile-excerpt {
+    .tile-excerpt, .featured-info{
       bottom: 18px;
       margin-right: 25%;
       padding-left: 15px;
       padding-right: 0;
       position: absolute;
 			h1,h2,h3,h4,h5,h6{
-				margin:.5em 0;
+				margin:.25em 0;
 			}
     }
     .tile-title {
