--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -5039,6 +5039,19 @@ ul{
   /*unfinished*/
   .module-hero .module-overlay[class*="opaque-"] {
     color: white; } }
+/*.edgeless [class*=' col-'], .edgeless .row [class*=' col-'], .edgeless .tile{
+	margin:0;
+	padding:0;
+	margin-bottom:0;
+	padding-left:0;
+	padding-right:0;
+}
+.edgeless{
+	.row{
+		margin-left:0;
+		margin-right:0;
+	}
+}*/
 #inspiration p {
   margin: 0;
   clear: both; }
@@ -8036,3 +8049,5 @@ input[type="submit"]:hover {
 .social span a:hover span.hint {
   display: inline-block;
   color: white; }
+
+/*# sourceMappingURL=global.css.map */
